--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -18,8 +18,6 @@ footer {
 .video {
   border: 3px solid #f18119;
   padding: 0px;
-  margin-left: 300px;
-  margin-top: 120px;
   width: 900px;
   height: 450px; }
 
@@ -39,9 +37,7 @@ footer {
   border: 5px solid #fff; }
 
 * {
-  list-style-type: none; }
-
-.fondo {
+  list-style-type: none;
   background-color: #082381; }
 
 h1,
