--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -28,9 +28,6 @@ p {
   display: none;
 }
 @media (max-width: 705px) {
-  * {
-    background-color: $color-primario;
-  }
   .anteojos img {
     border: 3px solid coral;
     border-right: 3px solid coral;
@@ -55,7 +52,9 @@ p {
   .menuAbajo a:hover {
     color: coral;
   }
-
+  .redesUp {
+    display: none;
+  }
   .redesAbajo ul {
     display: flex;
     flex-direction: row-reverse;
