--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -18,6 +18,7 @@ footer {
 .video {
   border: 3px solid #f18119;
   padding: 0px;
+  margin-left: 300px;
   width: 900px;
   height: 450px; }
 
@@ -37,7 +38,9 @@ footer {
   border: 5px solid #fff; }
 
 * {
-  list-style-type: none;
+  list-style-type: none; }
+
+.fondo {
   background-color: #082381; }
 
 h1,
@@ -55,8 +58,6 @@ p {
   display: none; }
 
 @media (max-width: 705px) {
-  * {
-    background-color: #082381; }
   .anteojos img {
     border: 3px solid coral;
     border-right: 3px solid coral; }
@@ -73,6 +74,8 @@ p {
     text-align: center; }
   .menuAbajo a:hover {
     color: coral; }
+  .redesUp {
+    display: none; }
   .redesAbajo ul {
     display: flex;
     flex-direction: row-reverse;
